@@ -11,15 +11,12 @@ import com.newfit.reservation.dto.response.RoutineListResponse;
 import com.newfit.reservation.dto.response.RoutineResponse;
 import com.newfit.reservation.exception.CustomException;
 import com.newfit.reservation.exception.ErrorCode;
-import com.newfit.reservation.repository.equipment.EquipmentRepository;
 import com.newfit.reservation.repository.routine.EquipmentRoutineRepository;
 import com.newfit.reservation.repository.routine.RoutineRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -28,7 +25,6 @@ public class RoutineService {
 
     private final RoutineRepository routineRepository;
     private final EquipmentRoutineRepository equipmentRoutineRepository;
-    private final EquipmentRepository equipmentRepository;
 
     /*
     이전에 등록한 루틴과 동일한 이름이라면 exception이 발생합니다.
@@ -60,8 +56,7 @@ public class RoutineService {
         List<Routine> findRoutines = routineRepository.findAllByAuthority(authority);
 
         List<RoutineResponse> routines = findRoutines.stream()
-                .map(RoutineResponse::new)
-                .collect(Collectors.toList());
+                .map(RoutineResponse::new).toList();
 
         return RoutineListResponse.createResponse(routines);
     }
@@ -88,12 +83,10 @@ public class RoutineService {
         List<EquipmentRoutine> findEquipmentRoutines = equipmentRoutineRepository.findAllByRoutine(findRoutine);
 
         List<Equipment> findEquipments = findEquipmentRoutines.stream()
-                .map(EquipmentRoutine::getEquipment)
-                .toList();
+                .map(EquipmentRoutine::getEquipment).toList();
 
         List<RoutineDetailEquipmentResponse> equipments = findEquipments.stream()
-                .map(RoutineDetailEquipmentResponse::new)
-                .collect(Collectors.toList());
+                .map(RoutineDetailEquipmentResponse::new).toList();
 
         return RoutineDetailResponse.createResponse(findRoutine.getId(), findRoutine.getName(), equipments);
     }
